src/test/ui/rfc-2627-raw-dylib/link-ordinal-missing-argument.stderr
error: incorrect number of arguments to `#[link_ordinal]`
  --> $DIR/link-ordinal-missing-argument.rs:5:5
   |
LL |     #[link_ordinal()]
   |     ^^^^^^^^^^^^^^^^^
   |
   = note: the attribute requires exactly one argument

error: incorrect number of arguments to `#[link_ordinal]`
  --> $DIR/link-ordinal-missing-argument.rs:8:5
   |
LL |     #[link_ordinal()]
   |     ^^^^^^^^^^^^^^^^^
   |
   = note: the attribute requires exactly one argument

error: aborting due to 2 previous errors

